# hexagonal-api

./: .env_example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 7536a64b6931_create_product.py  89be0563e378_db_users_and_products.py  c164216f24a6_create_product.py  e0d4b1ade2c0_initial_migration.py  e76337d0b88f_create_users_table.py  ee13079f6e79_initial_migration.py  ffba6a7ee788_add_user_model.py
app/: main.py
app/config/: config.py  constants.py  database.py  error_handlers.py  exceptions.py  fastapi_config.py  security.py
app/products/application/: use_cases.py
app/products/domain/: model.py  repository_interface.py
app/products/infrastructure/: dtos.py  models.py  repository.py  router.py
app/users/application/: register_user.py  use_cases.py  use_casesv1.py
app/users/domain/: model.py  model_schemas.py  repository_interface.py
app/users/infrastructure/: dtos.py  models.py  repository.py  router.py
docs/collections/: API HEXAGONAL.postman_collection.json  Entorno Pruebas.postman_environment.json
scripts/: lint_and_format.py  profile_get_current_user.py  test_user_use_case.py
tests/: conftest.py  test_login.py  test_product_dtos.py  test_product_routers.py  test_product_use_case.py  test_register.py  test_routers_ping.py  test_security.py  test_token.py  test_user_routers.py  test_users_repository.py
tests/application/: test_product_use_case.py
tests/infrastructure/dtos/: test_product_dtos.py
tests/infrastructure/repository/: test_users_repository.py
tests/infrastructure/routers/: test_product_routers.py  test_user_routers.py
