[tool.poetry]
name = "hexagonal-api"
version = "0.1.0"
description = "API RESTful con FastAPI y SQLite, con autenticación y autorización (JWT), y pruebas unitarias (pytest). Implementada con Arquitectura Hexagonal, Vertical Slice y Screaming Architecture."
authors = ["lesmesl <c.lesmesl@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
